--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,5 +26,5 @@
     "fstream": "cpp"
   },
   "C_Cpp.intelliSenseEngineFallback": "Enabled",
-  "C_Cpp.errorSquiggles": "Enabled"
+  "C_Cpp.errorSquiggles": "Disabled"
 }
